<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_moviedetail"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ratanapps.movieexplorer.activity.moviedetail">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/main_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:transitionName="poster"
                app:layout_collapseMode="parallax" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_protection_scrim_height"
                android:layout_gravity="bottom"
                android:layout_alignBottom="@+id/main_backdrop"
                android:background="@drawable/collapse_back_grad"/>



            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:useDefaultMargins="true"
            app:columnCount="2"
            android:id="@+id/mygridlayout">

            <TextView
                app:layout_column="0"
                app:layout_row="0"
                android:text="@string/title"
                style="@style/left_column_bold" />

            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="0"
                tools:text="@string/example_title"
                android:id="@+id/grid_title" />


            <TextView
                app:layout_column="0"
                app:layout_row="1"
                android:text="@string/imdbrating"
                style="@style/left_column_bold" />

            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="1"
                tools:text="@string/example_imdbrating"
                android:id="@+id/grid_imdbRating" />

            <TextView
                app:layout_column="0"
                app:layout_row="2"
                android:text="@string/imdbvotes"
                style="@style/left_column_bold" />

            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="2"
                tools:text="@string/example_imdbvotes"
                android:id="@+id/grid_imdbVotes" />






            <TextView
                style="@style/left_column_bold"
                app:layout_column="0"
                app:layout_row="3"
                android:text="@string/released" />
            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="3"
                tools:text="@string/example_release"
                android:id="@+id/grid_released" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/runtime"
                app:layout_column="0"
                app:layout_row="4" />
            <TextView
                style="@style/right_column_normal"
                tools:text="@string/example_runtime"
                app:layout_column="1"
                app:layout_row="4"
                android:id="@+id/grid_runtime" />


            <TextView
                android:text="@string/director"
                app:layout_column="0"
                app:layout_row="5"
                style="@style/left_column_bold" />
            <TextView
                style="@style/right_column_normal"
                tools:text="@string/example_director"
                app:layout_column="1"
                app:layout_row="5"
                android:id="@+id/grid_director" />


            <TextView
                style="@style/left_column_bold"
                app:layout_column="0"
                app:layout_row="6"
                android:text="@string/Genre" />
            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="6"
                tools:text="@string/example_genre"
                android:id="@+id/grid_genre" />


            <TextView
                style="@style/left_column_bold"
                android:text="@string/Writer"
                app:layout_column="0"
                app:layout_row="7" />
            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="7"
                android:layout_width="0dp"
                tools:text="@string/example_writer"
                android:id="@+id/grid_writers" />



            <TextView
                style="@style/left_column_bold"
                android:text="@string/actors"
                app:layout_column="0"
                app:layout_row="8" />
            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="8"
                tools:text="@string/example_actors"
                android:id="@+id/grid_actors" />



            <TextView
                app:layout_column="0"
                app:layout_row="9"
                android:text="@string/language"
                style="@style/left_column_bold" />

            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="9"
                tools:text="@string/example_language"
                android:id="@+id/grid_language" />


            <TextView
                app:layout_column="0"
                app:layout_row="10"
                android:text="@string/country"
                style="@style/left_column_bold" />

            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="10"
                tools:text="@string/example_country"
                android:id="@+id/grid_country" />


            <TextView
                app:layout_column="0"
                app:layout_row="11"
                android:text="@string/awards"
                style="@style/left_column_bold" />

            <TextView
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="11"
                tools:text="@string/example_awards"
                android:id="@+id/grid_awards" />


            <TextView
                app:layout_column="0"
                app:layout_row="12"
                style="@style/left_column_bold"
                android:text="@string/plot" />
            <TextView
                app:layout_column="1"
                app:layout_row="12"
                tools:text="@string/example_full_plot"
                style="@style/right_column_normal"
                android:id="@+id/grid_plot"/>











        </android.support.v7.widget.GridLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
